--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.6.0",
+    "final-form": "^4.20.2",
+    "firebase": "^8.3.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
+    "react-final-form": "^6.5.3",
+    "react-firebase-hooks": "^3.0.3",
     "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3"
   },
   "scripts": {
