--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "final-form": "^4.20.2",
-    "firebase": "^8.3.1",
+    "firebase": "^8.3.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
