--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "react-tilty": "^2.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
