--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.1",
     "react-final-form": "^6.5.3",
     "react-firebase-hooks": "^3.0.3",
+    "react-iframe": "^1.8.0",
     "react-redux": "^7.2.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
