--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "final-form": "^4.20.2",
     "firebase": "^8.3.2",
+    "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
     "react-dom": "^17.0.1",
